# BackModeloIA

./: render.yaml
ia-cpp/: CMakeLists.txt  Dockerfile  README.md
ia-cpp/models/: model.onnx
ia-cpp/src/: main.cpp
